# matplotlib-scalebar

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .project.sample  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  python.yml
doc/: argument_bbox_to_anchor.py  argument_dimension.py  argument_dx.py  argument_length_fraction.py  argument_pad.py  argument_rotation.py  argument_scale_loc.py  example1.py  example2.py  example3.py  example_angular.py  example_dimension.py  example_location.py  getting_started.py  nomenclature.py  original_resolution.py  splashscreen.py
matplotlib_scalebar/: _version.py  dimension.py  dualscalebar.py  scalebar.py  test_dimension.py  test_dualscalebar.py  test_scalebar.py
tests/: test_dimension.py  test_scalebar.py
